apps/claws/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: claws
subsets:
  - addresses:
      - ip: 192.168.0.73
    ports:
      - port: 3000
        protocol: TCP
