apps/claws/service-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: claws-staging
  namespace: default
spec:
  selector:
    app: claws-staging
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
  clusterIP: None
