apps/claws/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: claws-staging
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-traefik
  tls:
    - hosts:
        - claws-staging.home.bstjohn.net
      secretName: wildcard-home-tls
  rules:
    - host: claws-staging.home.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: claws-staging
                port:
                  number: 3000
